log
Thu 16 May 2024 02:21:15 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:67:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   67 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
e3326ff
